fixing buttons under the comments and map position on smaller screens

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -11,8 +11,11 @@
 }
 
 #mapid {
-   height: 250px;
+  max-width: 550px;
+  margin: auto;
+   height: 500px;
    margin-top: 100px;
+   z-index: 0;
  }
 
 #map {
@@ -51,8 +54,17 @@ i.icon {
     margin: 20px 0;
 }
 
-#delete {
+.delete {
     display: inline;
+}
+
+.edit {
+  float: left;
+}
+
+.commentButton {
+  margin: 0.5rem;
+  padding-right: 2rem;
 }
 
 body {
